fixed the problems with adaptability on tablets

--- a/src/style/partials/header.scss
+++ b/src/style/partials/header.scss
@@ -1,5 +1,12 @@
 // header's styles
 
+
+.container {
+    @include adaptive("tablet") {
+        width: 100%;
+    }
+}
+
 .header {
     @extend .reset-default-styles;
 }
